deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepfield-backend
  namespace: deepfield
  labels:
    app: deepfield
    component: backend
spec:
  selector:
    app: deepfield
    component: backend
  ports:
    - name: oauth-proxy
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: backend
      port: 8099
      targetPort: 8099
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: deepfield-postgres
  namespace: deepfield
  labels:
    app: deepfield
    component: postgres
spec:
  selector:
    app: deepfield
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
