deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: deepfield
  namespace: deepfield
  labels:
    app: deepfield
spec:
  to:
    kind: Service
    name: deepfield-backend
  port:
    targetPort: oauth-proxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
